Allow formatter resolution from parallel subprojects